add toString() methods